final reading for pre-proceeding: validity condition again

--- a/LSFA/LSFA23-revised.tex
+++ b/LSFA/LSFA23-revised.tex
@@ -1245,7 +1245,7 @@ The equivalence relation $\circeq$ is extended with two equations:
 % \end{equation}
 %The idea behind the definition of $\circeq$ is that when $\topr$ or $\botl$ is applicable, we should convert the whole derivation into the appropriate one.
 In the focused sequent calculus we add $\topr$ in phase $\vdash_\RI$ and $\botl$ in phase $\vdash_\LI$, so  that they can be applied as early as possible.
-We include a new tag $\tT$ for $\top$. The validity condition for lists of tags is updated as follows: ($i$) $\tT$ or $\tE \in l$, ($ii$) for any $t \in l$, $t = \tT$, or ($iii$) both $\tCone \in l$ and $\tCtwo \in l$. 
+We include a new tag $\tT$ for $\top$. The validity condition for lists of tags is updated as follows: ($i$) $\tT$ or $\tE \in l$ or ($ii$) both $\tCone \in l$ and $\tCtwo \in l$. 
 \begin{equation*}\label{eq:focus:units}
   \begin{array}{c}
 %    \text{(right invertible)} & %\\[-4pt] &
